landing page centering

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 layout: home
 ---
 
-<div class="home">
-    <img src="/images/full.png" />
-    <a class="link1" href="/about/">about</a>
-    <a class="link2" href="/projects/">projects</a>
+<div class="home-wrapper">
+    <div class="home">
+        <img src="/images/full.png" />
+        <a class="link1" href="/about/">about</a>
+        <a class="link2" href="/projects/">projects</a>
+    </div>
 </div>
