added alt attributes on images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 
 <div class="home-wrapper">
     <div class="home">
-        <img src="/images/full.png" />
+        <img alt="Hey there, I am doebi!" src="/images/full.png" />
         <a class="link1" href="/about/">about</a>
         <a class="link2" href="/projects/">projects</a>
     </div>
