--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
----
-layout: home
----
-
-<div class="home-wrapper">
-    <div class="home">
-        <img alt="Hey there, I am doebi!" src="/images/full.png" />
-        <a class="link1" href="/about/">about</a>
-        <a class="link2" href="/projects/">projects</a>
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>CD</title>
+  </head>
+  <body>
+    hallo welt
+  </body>
+</html>
